--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "framer-motion": "^10.18.0",
     "immer-reducer": "^0.7.13",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "prisma": "5.8.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
