--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.18.0",
     "immer-reducer": "^0.7.13",
-    "lucide-react": "^0.309.0",
+    "lucide-react": "^0.477.0",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "prisma": "5.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/crypto-js": "^4.2.1",
@@ -45,14 +46,13 @@
     "@types/react": "^18",
     "@types/react-alert": "^7.0.6",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^15.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "5.8.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
